--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -32,9 +32,26 @@ jobs:
       - name: Test with pytest
         run: |
           pytest
-      
+
+  release:
+    runs-on: ubuntu-latest
+    concurrency: test
+    permissions:
+      id-token: write
+      contents: write
+
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Python Semantic Release
+      uses: python-semantic-release/python-semantic-release@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+
   build:
-    needs: test
+    needs: release
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -51,7 +68,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build
+          pip install build python-semantic-release
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Build package
         run: |
