--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -49,6 +49,7 @@ jobs:
     - name: Python Semantic Release
       uses: python-semantic-release/python-semantic-release@master
       with:
+        force: "patch"
         github_token: ${{ secrets.GITHUB_TOKEN }}
 
   build:
